# service_provider

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/service_provider/: Cargo.toml  service_provider.did  service_provider.rs
src/service_provider_assets/public/: index.js
